refact(server): timestamp control

--- a/article/tcc.tex
+++ b/article/tcc.tex
@@ -737,8 +737,8 @@ a estes tempos.
 
   with open(f"{BASE_PATH}/requests.json", "r") as json_file:
     content = json.load(json_file)
-    start = content['start']
-    end = content['end']
+    start = content['start'] - 1000
+    end = content['end'] - 1000
 
   target_start = df['timestamp'][0] + timedelta(milliseconds=start)
   target_end = df['timestamp'][0] + timedelta(milliseconds=end)
