fix(tex): fixed grammar errors and ref

--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -170,3 +170,10 @@ publisher={O'Reilly},
 year={2020},
 volume={1 ed.}
 }
+
+@misc{NODEV8,
+author={{Node.js Dev}},
+title={The V8 JavaScript Engine},
+howpublished={\url{https://nodejs.dev/en/learn/the-v8-javascript-engine/}},
+note={Acessado em: 05 de junho de 2023}
+}
