--- a/article/tcc.tex
+++ b/article/tcc.tex
@@ -143,7 +143,7 @@ operação não seja tão elevado. \cite[p. 3]{EJSMONT}. O \textit{Node.js}, dev
 assíncrona, entrada e saída não bloqueantes e orientadas a eventos, caracteriza-se como
 uma plataforma escalável. \cite[p. 2]{SCALABILITY}. A incorporação de escalabilidade
 em um sistema pode compreender a capacidade de lidar com um crescimento de usuários, solicitações
-e transações, para este projeto, seu uso será voltado para a requisição e transferência de grandes volumes de dados.
+e transações. Para este projeto, seu uso será voltado para a requisição e transferência de grandes volumes de dados.
 
 
 \subsection{Padrões de projeto no \textit{Node.JS}}
@@ -183,7 +183,7 @@ mudanças nos dados recebidos \cite[p. 27]{DIOGORESENDE}.
 
 Os sistemas operacionais oferecem operações bloqueantes para leitura e gravação em arquivos, fazendo com que ocorra
 um bloqueio na execução do programa principal até que haja uma resposta das solicitações. Nesse contexto, até pequenos
-bloqueio podem resultar no travamento de aplicações baseadas no modelo cliente/servidor e, dessa forma, novas requisições
+bloqueios podem resultar no travamento de aplicações baseadas no modelo cliente/servidor e, dessa forma, novas requisições
 deverão esperar. Para tal problema, operações de I/O não bloqueantes - também conhecidos como I/O assíncrono - oferecem
 uma solução elegante, com o uso de \textit{callbacks} que serão invocadas ao fim das solicitações 
 de leitura e escrita em arquivos \cite{UDESC}.
