--- a/article/tcc.tex
+++ b/article/tcc.tex
@@ -669,22 +669,31 @@ as figuras são geradas com o uso da biblioteca \textit{Matplotlib}.
 			fileName=f"{BASE_PATH}/{contentFileName}"
 		)
 
+		first_time = df['timestamp'].iloc[0]
+  	x_values = [differenceInMinutes(value, first_time) for value in df["timestamp"]]
+
 		generateFig(
-			title="Gráfico Tempo X Consumo de RAM",
-			x_label="Tempo",
+			x_label="Tempo (min)",
 			y_label="Memória (MB)",
-			fileName=f"{BASE_PATH}/memory_usage{f'_{id}' if id is not None else ''}.png",
-			x=df["timestamp"],
-			y=df["memory"]
+			fileName=f"{BASE_PATH}/{server}_memory_usage{f'_{id}' if id is not None else ''}.png",
+			x=x_values,
+			y=df["memory"],
+			start_x=differenceInMinutes(start_time, first_time),
+			start_y=start_usage["memory"],
+			end_x=differenceInMinutes(end_time, first_time),
+			end_y=end_usage["memory"]
 		)
 
 		generateFig(
-			title="Gráfico Tempo X Consumo de CPU",
-			x_label="Tempo",
+			x_label="Tempo (min)",
 			y_label="CPU (%)",
-			fileName=f"{BASE_PATH}/cpu_usage{f'_{id}' if id is not None else ''}.png",
-			x=df["timestamp"],
-			y=df["cpu"]
+			fileName=f"{BASE_PATH}/{server}_cpu_usage{f'_{id}' if id is not None else ''}.png",
+			x=x_values,
+			y=df["cpu"],
+			start_x=differenceInMinutes(start_time, first_time),
+			start_y=start_usage["cpu"],
+			end_x=differenceInMinutes(end_time, first_time),
+			end_y=end_usage["cpu"]
 		)
 \end{lstlisting}
 
