refact(article): reworked code frame line count style

--- a/article/tcc.tex
+++ b/article/tcc.tex
@@ -61,10 +61,13 @@
 	basicstyle=\small\ttfamily, 
 	breaklines=true, 
 	numbers=left, 
-	numberstyle=\tiny\color{lightgray}, 
+	numberstyle=\tiny\color{black}, 
 	stepnumber=1, 
 	numbersep=8pt, 
-	frame=single, 
+	frame=single,
+	xleftmargin=2em,
+	frame=single,
+	framexleftmargin=1.5em,
 	showspaces=false,
 	showstringspaces=false,
 	showtabs=false,
